--- a/index.html
+++ b/index.html
@@ -51,4 +51,8 @@
    
    
    </div>
-</hmtl>
+ <footer>
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiNxONXTR-J65ic_xzd417ThVXkRwNKEBPEQ&usqp=CAU ">
+     <p class="cop">Copyright Barbearia Alura - 2019<p>
+  </footer>
+     </hmtl>
