--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiNxONXTR-J65ic_xzd417ThVXkRwNKEBPEQ&usqp=CAU"> </h1>
  <nav>     
       <ul>
-        <li><a href=``index.html´´> HOME </a>   </li>
-        <li><a href=´´produtos.html´´> Jogos / PS2 </a>   </li>
-        <li><a  href=´´contato.html´´> CONTATO </a>  </li>
+        <li><a href="index.html"> HOME </a>   </li>
+        <li><a href="produtos.html"> Jogos / PS2 </a>   </li>
+        <li><a  href="contato.html"> CONTATO </a>  </li>
        
       </ul>
       </nav>
